--- a/RestockList/Resources/Base.lproj/Main.storyboard
+++ b/RestockList/Resources/Base.lproj/Main.storyboard
@@ -12,14 +12,14 @@
         <!--消耗品リスト-->
         <scene sceneID="5iX-Yk-WKQ">
             <objects>
-                <tableViewController storyboardIdentifier="Main" id="mnu-J1-1eu" customClass="ItemTableViewController" customModule="RestockList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Main" id="mnu-J1-1eu" customClass="ExpendableTableViewController" customModule="RestockList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="120" estimatedRowHeight="120" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="acE-1b-0fM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="140" id="9bB-1S-YM4" customClass="ItemTableViewCell" customModule="RestockList" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="140" id="9bB-1S-YM4" customClass="ExpendableTableViewCell" customModule="RestockList" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="140"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9bB-1S-YM4" id="DXO-74-8pb">
@@ -162,8 +162,8 @@
                                 <connections>
                                     <outlet property="checkButton" destination="YuL-EP-SLh" id="Iyv-A2-m9l"/>
                                     <outlet property="editButton" destination="4cM-re-RYZ" id="Rze-ZR-vVU"/>
-                                    <outlet property="itemFrame" destination="eqf-R9-T7z" id="6n9-33-zs6"/>
-                                    <outlet property="itemLabel" destination="Rhl-ZN-zop" id="e7T-WW-rCq"/>
+                                    <outlet property="expendableFrame" destination="eqf-R9-T7z" id="6n9-33-zs6"/>
+                                    <outlet property="expendableLabel" destination="Rhl-ZN-zop" id="e7T-WW-rCq"/>
                                     <outlet property="minusButton" destination="nKs-21-GJP" id="Iq7-m0-f7E"/>
                                     <outlet property="periodFrame" destination="cnH-Uc-xai" id="rFR-cs-WjQ"/>
                                     <outlet property="periodLabelLeft" destination="6Of-ft-48j" id="o6x-J3-oEa"/>
@@ -308,7 +308,7 @@
                     <navigationItem key="navigationItem" title="アイテムを編集" id="DJK-Ts-bDh"/>
                     <connections>
                         <outlet property="deleteButton" destination="R0x-nF-cnA" id="6F4-XC-9ui"/>
-                        <outlet property="itemTextField" destination="pBb-2c-6qg" id="uhx-uI-v3o"/>
+                        <outlet property="nameTextField" destination="pBb-2c-6qg" id="uhx-uI-v3o"/>
                         <outlet property="periodPickerView" destination="2QX-AS-OcE" id="UOe-Wh-UTI"/>
                         <outlet property="saveButton" destination="lMM-ZT-MAr" id="oXN-MJ-Xae"/>
                         <outlet property="textFieldBackground" destination="xq6-4a-pxv" id="mDd-Cu-8lt"/>
@@ -408,7 +408,7 @@
                     <navigationItem key="navigationItem" title="アイテムを追加" id="Yob-7P-ti3"/>
                     <connections>
                         <outlet property="addButton" destination="h2r-eK-pYQ" id="Prp-Xu-lnn"/>
-                        <outlet property="itemTextField" destination="YkB-CK-2Ld" id="1ZB-KO-TUh"/>
+                        <outlet property="nameTextField" destination="YkB-CK-2Ld" id="1ZB-KO-TUh"/>
                         <outlet property="periodPickerView" destination="j2u-az-0dz" id="TON-71-ChV"/>
                         <outlet property="textFieldBackground" destination="5dl-vY-nAN" id="1hg-7d-vtI"/>
                     </connections>
@@ -472,7 +472,7 @@
             <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor1">
-            <color red="0.082352941176470587" green="0.70980392156862748" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BackgroundColor">
             <color red="0.94509803921568625" green="0.94509803921568625" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
